tests/rosetta/transpiler/Clojure/a+b.error
run error: exit status 1
Execution error (ClassCastException) at main/main (a+b.clj:10).
class java.lang.String cannot be cast to class java.lang.Character (java.lang.String and java.lang.Character are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-13003651739546689383.edn
